Fix uneven pixels for jump to top button

--- a/src/App.css
+++ b/src/App.css
@@ -406,7 +406,7 @@ button ion-icon {
   background-color: var(--blueish);
   border: none;
   border-radius: 999px;
-  bottom: 35px;
+  bottom: 30px;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px;
   color: var(--bluer);
   cursor: pointer;
